test d'integration sorti de mezzo-libclient