@@ -71,21 +71,6 @@
         </executions>
       </plugin-->
 
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.7.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<argLine>-Djava.endorsed.dirs=${env.JACORB_HOME}/lib</argLine>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 	<profiles>
